<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/profile_image_view"
    android:orientation="vertical">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="50dp">

        <androidx.core.widget.NestedScrollView
            android:id="@+id/nested_scroll_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/white"
            android:clipToPadding="false"
            android:scrollbars="none"
            android:scrollingCache="true"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="230dp"
                    android:background="@color/grey_10"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        app:srcCompat="@drawable/profile"
                        android:contentDescription="@string/profile" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/lyt_form"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/spacing_large">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <ImageButton
                            android:layout_width="@dimen/spacing_mxlarge"
                            android:layout_height="@dimen/spacing_mxlarge"
                            android:layout_marginTop="@dimen/spacing_mlarge"
                            android:background="@android:color/transparent"
                            app:srcCompat="@drawable/profile"
                            app:tint="@color/grey_60"
                            android:contentDescription="@string/profile" />

                        <View
                            android:layout_width="@dimen/spacing_large"
                            android:layout_height="match_parent" />

                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColorHint="@color/grey_40">

                            <androidx.appcompat.widget.AppCompatEditText
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/name"
                                tools:ignore="SpeakableTextPresentCheck" />

                        </com.google.android.material.textfield.TextInputLayout>

                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/spacing_large" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="3"
                            android:orientation="horizontal">

                            <ImageButton
                                android:layout_width="@dimen/spacing_mxlarge"
                                android:layout_height="@dimen/spacing_mxlarge"
                                android:layout_marginTop="@dimen/spacing_mlarge"
                                android:background="@android:color/transparent"
                                app:srcCompat="@drawable/ic_phone"
                                app:tint="@color/grey_60"
                                android:contentDescription="@string/phone_number" />

                            <View
                                android:layout_width="@dimen/spacing_large"
                                android:layout_height="match_parent" />

                            <com.google.android.material.textfield.TextInputLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textColorHint="@color/grey_40">

                                <androidx.appcompat.widget.AppCompatEditText
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:hint="@string/phone_number" />

                            </com.google.android.material.textfield.TextInputLayout>

                        </LinearLayout>

                        <Button
                            android:id="@+id/spn_phone_type"
                            style="@style/Base.Widget.AppCompat.Spinner.Underlined"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="bottom"
                            android:layout_weight="2"
                            android:maxLines="1"
                            android:singleLine="true"
                            android:text="@string/phone_type"
                            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                            android:textColor="@color/grey_40" />

                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/spacing_large" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="3"
                            android:orientation="horizontal">

                            <ImageButton
                                android:layout_width="@dimen/spacing_mxlarge"
                                android:layout_height="@dimen/spacing_mxlarge"
                                android:layout_marginTop="@dimen/spacing_mlarge"
                                android:background="@android:color/transparent"
                                app:srcCompat="@drawable/ic_email"
                                app:tint="@color/grey_60"
                                android:contentDescription="@string/email_id" />

                            <View
                                android:layout_width="@dimen/spacing_large"
                                android:layout_height="match_parent" />

                            <com.google.android.material.textfield.TextInputLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textColorHint="@color/grey_40">

                                <androidx.appcompat.widget.AppCompatEditText
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:hint="@string/email" />

                            </com.google.android.material.textfield.TextInputLayout>

                        </LinearLayout>

                        <Button
                            android:id="@+id/spn_email_type"
                            style="@style/Base.Widget.AppCompat.Spinner.Underlined"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="bottom"
                            android:layout_weight="2"
                            android:maxLines="1"
                            android:singleLine="true"
                            android:text="@string/email_type"
                            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                            android:textColor="@color/grey_40" />

                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/spacing_large" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <ImageButton
                            android:id="@+id/imageButton2"
                            android:layout_width="@dimen/spacing_mxlarge"
                            android:layout_height="@dimen/spacing_mxlarge"
                            android:layout_marginTop="@dimen/spacing_mlarge"
                            android:background="@android:color/transparent"
                            app:srcCompat="@drawable/ic_location"
                            app:tint="@color/grey_60"
                            android:contentDescription="@string/location" />

                        <View
                            android:layout_width="@dimen/spacing_large"
                            android:layout_height="match_parent" />

                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColorHint="@color/grey_40">

                            <androidx.appcompat.widget.AppCompatEditText
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/address" />

                        </com.google.android.material.textfield.TextInputLayout>
                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/spacing_large" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <ImageButton
                            android:layout_width="@dimen/spacing_mxlarge"
                            android:layout_height="@dimen/spacing_mxlarge"
                            android:layout_marginTop="@dimen/spacing_mlarge"
                            android:background="@android:color/transparent"
                            app:srcCompat="@drawable/ic_domain"
                            app:tint="@color/grey_60"
                            android:contentDescription="@string/domain" />

                        <View
                            android:layout_width="@dimen/spacing_large"
                            android:layout_height="match_parent" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <com.google.android.material.textfield.TextInputLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textColorHint="@color/grey_40">

                                <androidx.appcompat.widget.AppCompatEditText
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:hint="@string/company" />

                            </com.google.android.material.textfield.TextInputLayout>

                            <View
                                android:layout_width="match_parent"
                                android:layout_height="@dimen/spacing_large" />

                            <com.google.android.material.textfield.TextInputLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textColorHint="@color/grey_40">

                                <androidx.appcompat.widget.AppCompatEditText
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:hint="@string/title" />

                            </com.google.android.material.textfield.TextInputLayout>

                        </LinearLayout>

                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/spacing_large" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <ImageButton
                            android:layout_width="@dimen/spacing_mxlarge"
                            android:layout_height="@dimen/spacing_mxlarge"
                            android:layout_marginTop="@dimen/spacing_mlarge"
                            android:background="@android:color/transparent"
                            app:srcCompat="@drawable/ic_public"
                            app:tint="@color/grey_60"
                            android:contentDescription="@string/public_domain" />

                        <View
                            android:layout_width="@dimen/spacing_large"
                            android:layout_height="match_parent" />

                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColorHint="@color/grey_40">

                            <androidx.appcompat.widget.AppCompatEditText
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/website" />

                        </com.google.android.material.textfield.TextInputLayout>

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/spacing_smlarge"
            android:clickable="true"
            android:tint="@android:color/white"
            app:backgroundTint="@color/blue_grey_800"
            app:fabSize="normal"
            app:layout_anchor="@id/lyt_form"
            app:layout_anchorGravity="top|end|right"
            app:rippleColor="@android:color/white"
            app:srcCompat="@drawable/ic_photo_camera"
            android:contentDescription="@string/form" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</LinearLayout>
